<resources>
    <string name="AllowNotificationPage">Please Allow or Unblock the Notification Settings on your phone to be able to receive MyGate-Notifications</string>
    <string name="Amount_Paid">Amount Paid</string>
    <string name="DenyNotificationPopUp">Are you sure you want to Deny?</string>
    <string name="NotificationPopupforDSIN">Are you sure you don\'t want to receive entry notifications of your delivery, cabs and other vendors?</string>
    <string name="NotificationPopupforDSOUT">Are you sure you don\'t want to receive exit notifications of your delivery, cabs and other vendors?</string>
    <string name="NotificationPopupforGIN">Are you sure you don\'t want to receive entry notifications of your guests?</string>
    <string name="NotificationPopupforGOUT">Are you sure you don\'t want to receive exit notifications of your guests?</string>
    <string name="NotificationPopupforNS">Are you sure you want to mute all notifications?</string>
    <string name="NotificationPopupforSPIN">Are you sure you don\'t want to receive entry notifications of your daily helps?</string>
    <string name="NotificationPopupforSPOUT">Are you sure you don\'t want to receive exit notifications of your daily helps?</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="absent">Absent</string>
    <string name="access_denied">Access Denied</string>
    <string name="action_FAQs">Help Center</string>
    <string name="activityNotFound">No activity found</string>
    <string name="activityNotFoundToRespond">No activity found to respond</string>
    <string name="add">ADD</string>
    <string name="add_comp">+ Add company name </string>
    <string name="add_contact_no">Add Contact Number</string>
    <string name="add_daily_help">Add Help</string>
    <string name="add_entry">Add Entry</string>
    <string name="add_family_but">Add Family</string>
    <string name="add_family_to_help_manage_visitors_and_household">Add family to help manage visitors and household.</string>
    <string name="add_flat_villa_workplace">Add Flat/Villa/Workplace</string>
    <string name="add_guest">Add Guest</string>
    <string name="add_pet">Add Pet</string>
    <string name="add_pets_for_their_easy_identification_in_the_society">Add pets for their easy identification in the society</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_vehicle_confirmation">Are you sure to add above Vehicle?</string>
    <string name="add_vehicles_for_their_easy_identification_in_the_society">Add vehicles for their easy identification in the society</string>
    <string name="added_by_mistake">Added by mistake</string>
    <string name="admin">Admin</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="admin_remarks">Admin Remarks</string>
    <string name="adoption_flats_message">MyGate’s best society has %1$s app adoption</string>
    <string name="advance_settings">Advance Settings</string>
    <string name="advanced_options">Advanced Options »</string>
    <string name="agree_to_move_out_rules">Agree to Move-out Rules</string>
    <string name="agree_to_move_out_rules_underlined">Agree to Move-out Rules</string>
    <string name="alert_tenent_message">This function is unavailable as the flat is currently occupied by a tenant.</string>
    <string name="all_residents">All Residents</string>
    <string name="allow">ALLOW</string>
    <string name="allow_cab_label">Allow my cab to enter &lt;u&gt;&lt;font color=#F7635B&gt;today&lt;/font&gt;&lt;/u&gt; once in next</string>
    <string name="allow_delivery_label">Allow delivery executive to enter &lt;u&gt;&lt;font color=#F7635B&gt;today&lt;/font&gt;&lt;/u&gt; once in next</string>
    <string name="allow_once">Allow Once</string>
    <string name="allowed_extensions">Allowed extensions: jpg, jpeg, png, doc, pdf\10Allowed max size: 2MB</string>
    <string name="always_allow">Always Allow</string>
    <string name="amount_details_transition">amount_details_transition</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="amount_transition">amount_transition</string>
    <string name="appShareMsg">You have been referred to MyGate, the all-in-one solution for gated premises. Find out why 1 Million+ homes now use the app to manage their guests, deliveries and much more. Download the app on your device and discover the difference today!</string>
    <string name="appShareTitle">MyGate : Simplifying Urban living</string>
    <string name="app_adoption_help">App adoption is the percentage of flats on MyGate against the total number of flats in your community</string>
    <string name="app_feedback_hint">Let us know what went wrong</string>
    <string name="app_feedback_title">How can we make it better?</string>
    <string name="app_name">MyGate</string>
    <string name="app_notification_settings">App Notification Settings</string>
    <string name="app_rating_title">Enjoy using MyGate app?</string>
    <string name="app_share_message">Hi there! We\'ve been using the MyGate App in our society and find it really useful. It\'s great for managing guest entries, finding the best maids/cooks, making utility payments and more. Strongly recommend for your society.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="approval_accept_message">User approved successfully.</string>
    <string name="approval_added_message">User added successfully.</string>
    <string name="approval_notification_channel_name">Approval Notification</string>
    <string name="approval_pending_flats">It usually takes 1–2 days, in case of further delay, please reach out to your society management to speed up the approval.</string>
    <string name="approval_reject_message">User rejected successfully.</string>
    <string name="approve">Approve</string>
    <string name="approved">Approved</string>
    <string name="atitude_transition">atitude_transition</string>
    <string name="attach_photo_document">Attach Photo/Document</string>
    <string name="attendance_warn">This log only indicates if the Daily Help entered the society, not if they came to your house.</string>
    <string name="auto_approve_desc">Auto-approve whenever I order from:</string>
    <string name="auto_approve_entry_info">Only information directly shared by the verified partnerFa will get auto-approved entry.</string>
    <string name="bad_behaviour_message">Use this only for serious offences, as it might negatively impact the hiring of this person.</string>
    <string name="bank">Bank</string>
    <string name="below_num_opt_out">Below number is listed in the resident directory</string>
    <string name="big_plus">＋</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="branch">Branch</string>
    <string name="building">Building</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_delete">Delete</string>
    <string name="cab_approval">Cab</string>
    <string name="cab_preapproved_edit_success">Cab pre-approval updated successfully</string>
    <string name="cab_preapproved_success">Your cab will be allowed an entry</string>
    <string name="calendar">Calendar</string>
    <string name="canNotopenCamera">Can\'t open camera. Please check your sdcard.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_entry">Entry cancelled successfully</string>
    <string name="cancel_entry_desc">Are you sure you want to cancel this entry?</string>
    <string name="cancel_entry_title">Cancel Entry?</string>
    <string name="cancelled">Cancelled</string>
    <string name="card_transition">card_transition</string>
    <string name="cash">Cash</string>
    <string name="change">CHANGE</string>
    <string name="change_photo">Change Photo</string>
    <string name="channel_name">Notification</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checklist">Checklist</string>
    <string name="checkout_approval_success">Checkout approval preference has been updated successfully.</string>
    <string name="city">City</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_photo">Confirm Photo</string>
    <string name="contact_denied_permission">Please provide permissions to access phone contacts.</string>
    <string name="flat">Flat</string>
    <string name="move_in_date">Move-in Date</string>
    <string name="occupancy_status">Occupancy Status</string>
    <string name="ok">OK</string>
    <string name="photo_allowed_message1">Your profile photo is used to identify you as a resident to allow entry at clubhouse and other resident exclusive places.</string>
    <string name="photo_allowed_message2">Please contact Management Committee for any concern regarding this.</string>
    <string name="photo_allowed_message3">Your profile photo is used to identify you as a resident to allow entry at clubhouse and other resident exclusive places. You will not be able to update it later on.</string>
    <string name="photo_locked">Photo Locked</string>
    <string name="photo_not_allowed">You are not allowed to change photo.</string>
    <string name="pic_upload_confirm">Are you sure to lock this photo as profile picture?</string>
    <string name="reason_bad_behaviour">Bad behaviour</string>
    <string name="reason_others">Other</string>
    <string name="reason_service_not_required">Service not required</string>
    <string name="reason_work_quality">Work quality/irregularity</string>
    <string name="society">Society</string>
    <string name="title_fragment_profile_pic">Select from..</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_your_latest_photo">Upload your latest photo</string>
    <string name="view_move_in_rules">View Move-in Rules</string>
    <string name="you_are">You are</string>
</resources>