<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="@dimen/spec_heading" android:textStyle="bold" android:textColor="@color/spec_red" android:gravity="center" android:layout_gravity="center_horizontal" android:padding="@dimen/normalPadding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/photo_locked"/>
    <TextView android:textSize="@dimen/spec_subheading" android:textStyle="bold" android:textColor="@color/spec_black" android:gravity="center" android:layout_gravity="center_horizontal" android:padding="@dimen/normalPadding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/photo_not_allowed"/>
    <TextView android:textSize="@dimen/spec_text" android:textStyle="italic" android:textColor="@color/spec_orange" android:gravity="left" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/normalPadding" android:layout_marginRight="@dimen/normalPadding" android:text="@string/photo_allowed_message1"/>
    <TextView android:textSize="@dimen/spec_text" android:textStyle="italic" android:textColor="@color/spec_orange" android:gravity="left" android:layout_gravity="center_horizontal" android:padding="@dimen/normalPadding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/photo_allowed_message2"/>
    <TextView android:textSize="@dimen/spec_heading" android:textColor="@color/spec_red" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/okayButton" android:background="?android:attr/selectableItemBackground" android:padding="15dp" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/normalPadding" android:text="@string/ok"/>
</LinearLayout>
