<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="@dimen/spec_heading" android:textStyle="bold" android:textColor="@color/light_red" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/titleView" android:padding="@dimen/normalPadding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upload_photo"/>
    <TextView android:textSize="@dimen/spec_subheading" android:textStyle="bold" android:textColor="@color/spec_black" android:gravity="left" android:layout_gravity="left" android:id="@+id/uploadLatestView" android:paddingTop="@dimen/normalPadding" android:paddingRight="@dimen/normalPadding" android:paddingBottom="@dimen/normalPadding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/upload_your_latest_photo"/>
    <TextView android:textSize="@dimen/spec_text" android:textStyle="italic" android:textColor="@color/spec_orange" android:gravity="left" android:layout_gravity="left" android:id="@+id/latestPhotoDescView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="@dimen/normalPadding" android:text="@string/photo_allowed_message3"/>
    <TextView android:textSize="@dimen/spec_subheading" android:textColor="@color/spec_black" android:gravity="left" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:text="@string/title_fragment_profile_pic"/>
</LinearLayout>
