<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/white" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14sp" android:textColor="@color/charcoal_grey" android:id="@+id/textViewCityTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/city" android:textAllCaps="true" android:layout_marginStart="18dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/charcoal_grey" android:id="@+id/textViewCity" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginStart="18dp" android:layout_marginEnd="18dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewCityTitle"/>
        <TextView android:textSize="14sp" android:textColor="@color/charcoal_grey" android:id="@+id/textViewSocietyTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:text="@string/society" android:textAllCaps="true" android:layout_marginStart="18dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewCity"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/charcoal_grey" android:id="@+id/textViewSociety" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginStart="18dp" android:layout_marginEnd="18dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewSocietyTitle"/>
        <TextView android:textSize="14sp" android:textColor="@color/charcoal_grey" android:id="@+id/textViewBuildingTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:text="@string/building" android:textAllCaps="true" android:layout_marginStart="18dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewSociety"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/charcoal_grey" android:id="@+id/textViewBuilding" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginStart="18dp" android:layout_marginEnd="18dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewBuildingTitle"/>
        <TextView android:textSize="14sp" android:textColor="@color/charcoal_grey" android:id="@+id/textViewFlatTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:text="@string/flat" android:textAllCaps="true" android:layout_marginStart="18dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewBuilding"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/charcoal_grey" android:id="@+id/textViewFlat" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginStart="18dp" android:layout_marginEnd="18dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewFlatTitle"/>
        <TextView android:textSize="14sp" android:textColor="@color/charcoal_grey" android:id="@+id/textViewOccupancyTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:text="@string/you_are" android:textAllCaps="true" android:layout_marginStart="18dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewFlat"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/charcoal_grey" android:id="@+id/textViewOccupancy" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginStart="18dp" android:layout_marginEnd="18dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewOccupancyTitle"/>
        <TextView android:textSize="14sp" android:textColor="@color/charcoal_grey" android:id="@+id/textViewStatusTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:text="@string/occupancy_status" android:textAllCaps="true" android:layout_marginStart="18dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewOccupancy"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/charcoal_grey" android:id="@+id/textViewStatus" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="Moving In" android:layout_marginStart="18dp" android:layout_marginEnd="18dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewStatusTitle"/>
        <TextView android:textSize="14sp" android:textColor="@color/light_red" android:gravity="center_vertical" android:id="@+id/textViewMoveInRules" android:paddingTop="4dp" android:paddingBottom="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/view_move_in_rules" android:drawablePadding="10dp" android:drawableStart="@drawable/ic_society_rules" android:paddingStart="8dp" android:paddingEnd="8dp" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewStatus"/>
        <View android:id="@+id/dividerTop" android:background="@color/spec_black_15" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_marginTop="24dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:layout_constraintTop_toBottomOf="@+id/textViewMoveInRules"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/charcoal_grey" android:id="@+id/textViewDateTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14dp" android:text="@string/move_in_date" android:layout_marginStart="18dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dividerTop"/>
        <TextView android:textSize="16sp" android:textStyle="normal" android:textColor="@color/charcoal_grey" android:gravity="center_vertical" android:id="@+id/textViewDate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:drawablePadding="12dp" android:drawableStart="@drawable/ic_log_calendar_small" android:fontFamily="sans-serif" android:paddingStart="8dp" android:paddingEnd="8dp" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewDateTitle"/>
        <androidx.appcompat.widget.AppCompatButton android:theme="@style/PrimaryFlatButton" android:textSize="12sp" android:textStyle="bold" android:textColor="@color/active_pink" android:id="@+id/buttonChangeDate" android:paddingTop="12dp" android:paddingBottom="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0dp" android:minHeight="0dp" android:text="@string/change" android:paddingStart="16dp" android:paddingEnd="16dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="@+id/textViewDate" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/textViewDate"/>
        <View android:id="@+id/dividerBottom" android:background="@color/spec_black_15" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_marginTop="24dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:layout_constraintTop_toBottomOf="@+id/textViewDate"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
